# RayTracer

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  main.cpp  test.ppm
Math/: Point3D.cpp  Point3D.hpp
RayTracer/: Camera.cpp  Color.hpp  Ray.hpp  Sphere.cpp  Sphere.hpp
boostrap/: build_and_compile.sh
boostrap/Math/: Vector3D.cpp  Vector3D.hpp
boostrap/RayTracer/: Camera.hpp  Rectangle.cpp  Rectangle.hpp
documentation/html/: ALight_8hpp_source.html  AMaterial_8hpp_source.html  APrimitive_8hpp_source.html  AmbientLight_8hpp_source.html  CameraStruct_8hpp_source.html  Camera_8hpp_source.html  Color_8hpp_source.html  Cone_8hpp_source.html  ConfigParser_8hpp_source.html  Cylinder_8hpp_source.html  DLLoader_8hpp_source.html  DirectionalLight_8hpp_source.html  Error_8hpp_source.html  FlatMaterial_8hpp_source.html  Flatcolor_8hpp_source.html  ILight_8hpp_source.html  IMaterial_8hpp_source.html  IPrimitive_8hpp_source.html  Image_8hpp_source.html  LightStruct_8hpp_source.html  Logger_8hpp_source.html  Metal_8hpp_source.html  PPMWriter_8hpp_source.html  Parser_8hpp_source.html  Plane_8hpp_source.html  Ray_8hpp_source.html  (+275 more)
include/: Camera.hpp  DLLoader.hpp  Parser.hpp  PluginsManager.hpp  PrimitiveBuilder.hpp  RenderingContext.hpp  RenderingState.hpp  SFML.hpp  Scene.hpp  Screen.hpp  WindowManager.hpp  color.h  ray.cpp  ray.hpp  vector3D.cpp  vector3D.hpp
scenes/: example1.conf  example2.conf  mort.conf  other.conf  sujet.conf
src/: Camera.cpp  DLLoader.cpp  Main.cpp  Parser.cpp  PluginsManager.cpp  RenderingStates.cpp  Screen.cpp  ray.cpp  vector3D.cpp
(+245 files in other folders)
